Realizo pruebas de integración