@@ -5,8 +5,20 @@ import org.springframework.stereotype.Service;
 
 import com.example.usersbe.dao.UserDao;
 import com.example.usersbe.dto.AdminCreationRequest;
+import com.example.usersbe.exceptions.AdminNotFoundException;
+import com.example.usersbe.exceptions.AliasAlreadyUsedException;
+import com.example.usersbe.exceptions.EmailAlreadyUsedException;
+import com.example.usersbe.exceptions.EmailSendException;
+import com.example.usersbe.exceptions.ExpiredTokenException;
+import com.example.usersbe.exceptions.InvalidEmailException;
+import com.example.usersbe.exceptions.InvalidFieldException;
+import com.example.usersbe.exceptions.InvalidPasswordException;
+import com.example.usersbe.exceptions.InvalidTokenException;
+import com.example.usersbe.exceptions.MissingSuperAdminEmailConfigException;
+import com.example.usersbe.exceptions.NotAnAdminException;
+import com.example.usersbe.exceptions.SuperAdminProtectionException;
+import com.example.usersbe.exceptions.UserAlreadyExistsException;
 import com.example.usersbe.model.User;
-import com.example.usersbe.exceptions.*;
 
 import jakarta.mail.MessagingException;
 
@@ -19,12 +31,6 @@ import java.util.regex.Pattern;
 
 @Service
 public class UserService {
-
-    private static final String TOKEN_NOT_PROVIDED = "Token no proporcionado";
-    private static final String INVALID_TOKEN = "Token inválido";
-    private static final String EXPIRED_TOKEN = "Token caducado";
-    private static final String CREATOR_NOT_FOUND = "El creador no fue encontrado";
-    private static final String USER_NOT_A_CREATOR = "El usuario no es un creador";
 
     private final UserDao userDao;
     private final EmailService emailService;
@@ -243,14 +249,14 @@ public class UserService {
 
     private User getUserByValidToken(String token) {
         if (token == null || token.trim().isEmpty()) {
-            throw new InvalidTokenException(TOKEN_NOT_PROVIDED);
+            throw new InvalidTokenException("Token no proporcionado");
         }
         User user = userDao.findByResetPasswordToken(token.trim());
         if (user == null || user.getResetPasswordExpires() == null) {
-            throw new InvalidTokenException(INVALID_TOKEN);
+            throw new InvalidTokenException("Token inválido o caducado");
         }
         if (user.getResetPasswordExpires().isBefore(LocalDateTime.now())) {
-            throw new ExpiredTokenException(EXPIRED_TOKEN);
+            throw new ExpiredTokenException("Token caducado");
         }
         return user;
     }
@@ -283,24 +289,21 @@ public class UserService {
     }
 
     public User actualizarCreador(String id, String alias, String nombre,
-                              String apellidos, String email, String foto)
-        throws UserNotFoundException, InvalidRoleException, DuplicateAliasException, DuplicateEmailException {
-
+                                  String apellidos, String email, String foto) throws Exception {
         User u = userDao.findById(id).orElse(null);
-        if (u == null) throw new UserNotFoundException(CREATOR_NOT_FOUND);
-
+        if (u == null) throw new Exception("Creador no encontrado");
         if (u.getRole() != User.Role.GESTOR_CONTENIDO)
-            throw new InvalidRoleException(USER_NOT_A_CREATOR);
+            throw new Exception("El usuario indicado no es un creador");
 
         if (alias != null && !alias.isBlank()) {
             String aliasTrim = alias.trim();
             User byAlias = userDao.findByAlias(aliasTrim);
             if (byAlias != null && !byAlias.getId().equals(u.getId()))
-                throw new DuplicateAliasException("El alias ya está en uso");
+                throw new Exception("El alias ya está en uso");
             u.setAlias(aliasTrim);
         }
 
-        if (nombre != null) u.setNombre(nombre.trim());
+        if (nombre != null)    u.setNombre(nombre.trim());
         if (apellidos != null) u.setApellidos(apellidos.trim());
 
         if (email != null && !email.isBlank()) {
@@ -308,7 +311,7 @@ public class UserService {
             validateEmail(emailN);
             User byMail = userDao.findByEmail(emailN);
             if (byMail != null && !byMail.getId().equals(u.getId()))
-                throw new DuplicateEmailException("El email ya está en uso");
+                throw new Exception("El email ya está en uso");
             u.setEmail(emailN);
         }
 
@@ -317,12 +320,11 @@ public class UserService {
         return userDao.save(u);
     }
 
-
-    public User bloquearCreador(String id){
+    public User bloquearCreador(String id) throws Exception {
         User u = userDao.findById(id).orElse(null);
-        if (u == null) throw new UserNotFoundException(CREATOR_NOT_FOUND);
+        if (u == null) throw new Exception("Creador no encontrado");
         if (u.getRole() != User.Role.GESTOR_CONTENIDO)
-            throw new InvalidRoleException(USER_NOT_A_CREATOR);
+            throw new Exception("El usuario indicado no es un creador");
 
         if (Boolean.TRUE.equals(u.isBlocked())) {
             return u;
@@ -332,11 +334,11 @@ public class UserService {
         return u;
     }
 
-    public User desbloquearCreador(String id){
+    public User desbloquearCreador(String id) throws Exception {
         User u = userDao.findById(id).orElse(null);
-        if (u == null) throw new UserNotFoundException(CREATOR_NOT_FOUND);
+        if (u == null) throw new Exception("Creador no encontrado");
         if (u.getRole() != User.Role.GESTOR_CONTENIDO)
-            throw new InvalidRoleException(USER_NOT_A_CREATOR);
+            throw new Exception("El usuario indicado no es un creador");
 
         if (!Boolean.TRUE.equals(u.isBlocked())) {
             return u;
@@ -346,11 +348,11 @@ public class UserService {
         return u;
     }
 
-    public void eliminarCreador(String id) {
+    public void eliminarCreador(String id) throws Exception {
         User u = userDao.findById(id).orElse(null);
-        if (u == null) throw new UserNotFoundException(CREATOR_NOT_FOUND);
+        if (u == null) throw new Exception("Creador no encontrado");
         if (u.getRole() != User.Role.GESTOR_CONTENIDO)
-            throw new InvalidRoleException(USER_NOT_A_CREATOR);
+            throw new Exception("El usuario indicado no es un creador");
 
         userDao.deleteById(id);
     }
@@ -390,59 +392,39 @@ public class UserService {
         );
     }
     public User actualizarAdmin(String id, String alias, String nombre,
-                            String apellidos, String email, String foto,
-                            String departamento) {
+                                String apellidos, String email, String foto,
+                                String departamento) {
+        User u = userDao.findById(id).orElse(null);
+        if (u == null) throw new AdminNotFoundException(id);
+        if (u.getRole() != User.Role.ADMINISTRADOR) throw new NotAnAdminException();
 
-        User u = findValidAdmin(id);
+        if (alias != null && !alias.isBlank()) {
+            String aliasTrim = alias.trim();
+            User byAlias = userDao.findByAlias(aliasTrim);
+            if (byAlias != null && !byAlias.getId().equals(u.getId())) {
+                throw new AliasAlreadyUsedException();
+            }
+            u.setAlias(aliasTrim);
+        }
 
-        updateAliasIfValid(u, alias);
-        updateNombreApellidos(u, nombre, apellidos);
-        updateEmailIfValid(u, email);
-        updateOptionalFields(u, foto, departamento);
+        if (nombre != null)    u.setNombre(nombre.trim());
+        if (apellidos != null) u.setApellidos(apellidos.trim());
+
+        if (email != null && !email.isBlank()) {
+            String emailN = normalizeEmail(email);
+            validateEmail(emailN);
+            User byMail = userDao.findByEmail(emailN);
+            if (byMail != null && !byMail.getId().equals(u.getId())) {
+                throw new EmailAlreadyUsedException();
+            }
+            u.setEmail(emailN);
+        }
+
+        if (foto != null) u.setFoto(foto);
+        if (departamento != null) u.setDepartamento(departamento.trim());
 
         return userDao.save(u);
     }
-    private User findValidAdmin(String id) {
-        User u = userDao.findById(id).orElse(null);
-        if (u == null) throw new AdminNotFoundException(id);
-        if (u.getRole() != User.Role.ADMINISTRADOR)
-            throw new NotAnAdminException();
-        return u;
-    }
-
-    private void updateAliasIfValid(User u, String alias) {
-        if (alias == null || alias.isBlank()) return;
-
-        String aliasTrim = alias.trim();
-        User byAlias = userDao.findByAlias(aliasTrim);
-        if (byAlias != null && !byAlias.getId().equals(u.getId()))
-            throw new AliasAlreadyUsedException();
-
-        u.setAlias(aliasTrim);
-    }
-
-    private void updateNombreApellidos(User u, String nombre, String apellidos) {
-        if (nombre != null) u.setNombre(nombre.trim());
-        if (apellidos != null) u.setApellidos(apellidos.trim());
-    }
-
-    private void updateEmailIfValid(User u, String email) {
-        if (email == null || email.isBlank()) return;
-
-        String emailN = normalizeEmail(email);
-        validateEmail(emailN);
-        User byMail = userDao.findByEmail(emailN);
-        if (byMail != null && !byMail.getId().equals(u.getId()))
-            throw new EmailAlreadyUsedException();
-
-        u.setEmail(emailN);
-    }
-
-    private void updateOptionalFields(User u, String foto, String departamento) {
-        if (foto != null) u.setFoto(foto);
-        if (departamento != null) u.setDepartamento(departamento.trim());
-    }
-
 
     public User bloquearAdmin(String id) {
         User u = userDao.findById(id).orElse(null);
@@ -474,36 +456,45 @@ public class UserService {
         userDao.deleteById(id);
     }
     public User solicitarCreacionAdmin(AdminCreationRequest req) {
-        final String nombre       = req.getNombre();
-        final String apellidos    = req.getApellidos();
-        final String alias        = req.getAlias();
-        final String email        = req.getEmail();
-        final String fechaNac     = req.getFechaNac();
-        final String pwd          = req.getPwd();
-        final String foto         = req.getFoto();
-        final String departamento = req.getDepartamento();
+    final String nombre       = req.getNombre();
+    final String apellidos    = req.getApellidos();
+    final String alias        = req.getAlias();
+    final String email        = req.getEmail();
+    final String fechaNac     = req.getFechaNac();
+    final String pwd          = req.getPwd();
+    final String foto         = req.getFoto();
+    final String departamento = req.getDepartamento();
 
-        if (alias == null || alias.trim().isEmpty()) throw new InvalidFieldException("El alias es obligatorio");
-        if (!isAliasAvailable(alias)) throw new AliasAlreadyUsedException();
-        if (foto == null || foto.isBlank()) throw new InvalidFieldException("La foto (avatar) es obligatoria");
-        validateEmail(email);
-        final String emailN = normalizeEmail(email);
-        checkUserExists(emailN);
+    if (alias == null || alias.trim().isEmpty()) throw new InvalidFieldException("El alias es obligatorio");
+    if (!isAliasAvailable(alias)) throw new AliasAlreadyUsedException();
+    if (foto == null || foto.isBlank()) throw new InvalidFieldException("La foto (avatar) es obligatoria");
+    validateEmail(email);
+    final String emailN = normalizeEmail(email);
+    checkUserExists(emailN);
 
-        User user = buildUser(
-            nombre, apellidos, alias, emailN, fechaNac, pwd, false,
-            foto,User.Role.ADMINISTRADOR,null,null,null,departamento
-        );
-        user.setBlocked(true);                       
+    User user = buildUser(
+        nombre, apellidos, alias, emailN, fechaN, pwd,
+        /*vip*/ false,
+        foto,
+        /*role*/ User.Role.ADMINISTRADOR, // lo guardamos ya como admin…
+        /*descripcion*/ null,
+        /*especialidad*/ null,
+        /*tipoContenido*/ null,
+        /*departamento*/ departamento
+    );
 
-        String token = generateToken();
-        user.setAdminApprovalToken(token);
-        user.setAdminApprovalExpires(LocalDateTime.now().plusDays(2));
-        user.setAdminApprovalStatus(User.AdminApprovalStatus.PENDING);
-        userDao.save(user);
-        enviarCorreoAprobacionAdmin(user, token);
-        return user;
-    }
+    // Bloquea/deshabilita el acceso hasta la aprobación
+    user.setBlocked(true);                         // clave: no podrá autenticarse                 // si tienes este campo, mejor aún
+
+    String token = generateToken();
+    user.setAdminApprovalToken(token);
+    user.setAdminApprovalExpires(LocalDateTime.now().plusDays(2));
+    user.setAdminApprovalStatus(User.AdminApprovalStatus.PENDING);
+
+    userDao.save(user);
+    enviarCorreoAprobacionAdmin(user, token);
+    return user;
+}
 
 
     private void enviarCorreoAprobacionAdmin(User pendingUser, String token) {
@@ -680,41 +671,35 @@ public class UserService {
 
 
     public User aprobarAdminPorToken(String token) {
-        if (token == null || token.isBlank()) throw new InvalidTokenException(TOKEN_NOT_PROVIDED);
+        if (token == null || token.isBlank()) throw new InvalidTokenException("Token no proporcionado");
         User u = userDao.findByAdminApprovalToken(token.trim());
-        if (u == null) throw new InvalidTokenException(INVALID_TOKEN);
+        if (u == null) throw new InvalidTokenException("Token inválido");
         if (u.getAdminApprovalStatus() != User.AdminApprovalStatus.PENDING)
             throw new InvalidTokenException("La solicitud no está pendiente");
         if (u.getAdminApprovalExpires() == null || u.getAdminApprovalExpires().isBefore(LocalDateTime.now()))
-            throw new ExpiredTokenException(EXPIRED_TOKEN);
+            throw new ExpiredTokenException("Token caducado");
 
+        u.setRole(User.Role.ADMINISTRADOR);
         u.setAdminApprovalStatus(User.AdminApprovalStatus.APPROVED);
         u.setAdminApprovalToken(null);
         u.setAdminApprovalExpires(null);
 
-        u.setRole(User.Role.ADMINISTRADOR);
-        u.setBlocked(false);
-
         return userDao.save(u);
     }
 
-
     public User rechazarAdminPorToken(String token) {
-        if (token == null || token.isBlank()) throw new InvalidTokenException(TOKEN_NOT_PROVIDED);
+        if (token == null || token.isBlank()) throw new InvalidTokenException("Token no proporcionado");
         User u = userDao.findByAdminApprovalToken(token.trim());
-        if (u == null) throw new InvalidTokenException(INVALID_TOKEN);
+        if (u == null) throw new InvalidTokenException("Token inválido");
         if (u.getAdminApprovalStatus() != User.AdminApprovalStatus.PENDING)
             throw new InvalidTokenException("La solicitud no está pendiente");
         if (u.getAdminApprovalExpires() == null || u.getAdminApprovalExpires().isBefore(LocalDateTime.now()))
-            throw new ExpiredTokenException(EXPIRED_TOKEN);
+            throw new ExpiredTokenException("Token caducado");
 
         u.setAdminApprovalStatus(User.AdminApprovalStatus.REJECTED);
         u.setAdminApprovalToken(null);
         u.setAdminApprovalExpires(null);
 
-        u.setBlocked(true);
-
         return userDao.save(u);
     }
-
 }
